First day's work on js

--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,9 @@
 </head>
    
 <body>
-    <div>live server thing</div>
+    <div>I love coding. And desserts, too!</div>
     <canvas width="600" height="600" id="canv"></canvas>
-    <script src="require.js"></script>
-    <script>
-        require(["test", "data"], function() {
-        })
-
-    </script>
-    <!-- script src="test.js"></script -->
+    <script src="varfun.js"></script>
 
 </body>
 
